updated code repo

--- a/Code Demo with S3 Bucket.ipynb
+++ b/Code Demo with S3 Bucket.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "93bb0b0b",
    "metadata": {},
    "outputs": [],
@@ -46,12 +46,31 @@
     "\n",
     "from credentials import *\n",
     "import file_handler \n",
-    "import update_s3_files "
+    "import update_s3_files \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "fd89bec8-4ff2-4224-abcb-a8a123dc0fde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# merged_df - new files\n",
+    "# \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd012a77-f7ce-4772-94b2-0a67a4ee16cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "2707ef0e-68a4-4a0c-a37f-1f5ff2113c82",
    "metadata": {},
    "outputs": [],
@@ -94,7 +113,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "id": "6c6ed2fd-57e2-4134-80c2-43702ab1217a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "0bab5c62-902b-4d07-ba93-ecf209ccaf3e",
    "metadata": {},
    "outputs": [
@@ -431,7 +458,7 @@
        "12                  NaN  fcmb_20240828/7564669779.csv  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "d110ae2a-da73-44c6-a504-5a1df74611f9",
    "metadata": {},
    "outputs": [
@@ -501,7 +528,49 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>22207845921</td>\n",
-       "      <td>-1025264813</td>\n",
+       "      <td>-2147483648</td>\n",
+       "      <td>340000.0</td>\n",
+       "      <td>2019-06-13</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Loan declined due to low transaction or incomp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>22207845921</td>\n",
+       "      <td>-2147483648</td>\n",
+       "      <td>340000.0</td>\n",
+       "      <td>2019-06-13</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Loan declined due to low transaction or incomp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>22207845921</td>\n",
+       "      <td>-2147483648</td>\n",
        "      <td>340000.0</td>\n",
        "      <td>2019-06-13</td>\n",
        "      <td>0.0</td>\n",
@@ -525,25 +594,37 @@
       ],
       "text/plain": [
        "           bvn application_id  amount_requested date_created  \\\n",
-       "0  22207845921    -1025264813          340000.0   2019-06-13   \n",
+       "0  22207845921    -2147483648          340000.0   2019-06-13   \n",
+       "1  22207845921    -2147483648          340000.0   2019-06-13   \n",
+       "2  22207845921    -2147483648          340000.0   2019-06-13   \n",
        "\n",
        "   airtime_in_90days  bill_payment_in_90days  cable_tv_in_90days  \\\n",
        "0                0.0                     0.0                 0.0   \n",
+       "1                0.0                     0.0                 0.0   \n",
+       "2                0.0                     0.0                 0.0   \n",
        "\n",
        "   deposit_in_90days  easy_payment_in_90days  farmer_in_90days  \\\n",
        "0                0.0                     0.0               0.0   \n",
+       "1                0.0                     0.0               0.0   \n",
+       "2                0.0                     0.0               0.0   \n",
        "\n",
        "   inter_bank_in_90days  mobile_in_90days  utility_bills_in_90days  \\\n",
        "0                   0.0               0.0                      0.0   \n",
+       "1                   0.0               0.0                      0.0   \n",
+       "2                   0.0               0.0                      0.0   \n",
        "\n",
        "   withdrawal_in_90days default_in_last_90days has_it_make_it_good  \\\n",
        "0                   0.0                      N                   Y   \n",
+       "1                   0.0                      N                   Y   \n",
+       "2                   0.0                      N                   Y   \n",
        "\n",
        "   amount_approved                                     decline_reason  \n",
-       "0              0.0  Loan declined due to low transaction or incomp...  "
+       "0              0.0  Loan declined due to low transaction or incomp...  \n",
+       "1              0.0  Loan declined due to low transaction or incomp...  \n",
+       "2              0.0  Loan declined due to low transaction or incomp...  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "aa5400b5-90a3-4048-b50c-d3db3a8689e9",
    "metadata": {},
    "outputs": [
@@ -606,7 +687,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "b324f42e-51f5-417a-bb7a-3ed7866bfc41",
    "metadata": {},
    "outputs": [
@@ -628,7 +709,7 @@
        "Series([], Name: loan_message, dtype: bool)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
